 cnp-mitre-t1571-postgresql-ingress-9k5lqv-.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-t1571-postgresql-ingress-oacr3p2
  namespace: kube-system
spec:
  description: "Allow ingress communication only through standard ports of PostgresSQL" 
  endpointSelector:
    matchLabels:
      k8s-app: cilium
      pod-template-generation: 1
      controller-revision-hash: 7b445dc7b4
  ingress:
  - toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
